@@ -35,7 +35,11 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
-2007-02-23 DP  1.6.3  Use the correct version of the Slony scripts when 
+2007-02-23 DP  1.6.3  Fix a rare bug in the Edit Grid which could cause a crash
+                      when editting data in tables with deleted columns and a
+                      primary key that isn;t at the beginning of the table.
+                      Thanks to Patrick De Visschere for the test case.
+2007-02-23 DP  1.6.3  Use the correct version of the Slony scripts when
                       creating a new cluster, per Duncan Beeby.
 2007-02-22 DP  1.6.3  Prevent the Edit Grid Filter causing a crash if an
                       invalid filter containing a % is used, per Erwin.
